# check_reqs

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.ci/: requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  git_checks.yml
check_reqs/: __init__.py  __main__.py  check_reqs.py
docker/: README.md
tests/: test_parsing.py  test_version.py
tests/test_example/: test_hello.py
