# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
check_reqs = "check_reqs.__main__:app"

[project.optional-dependencies]
dev = [
"bandit~=1.7.4",
"black>=22.1,<24.0",
"darglint~=1.8.1",
"isort[colors]>=5.10.1,<5.13.0",
"mypy>=0.941,<2.0",
"mypy-extensions>=0.4.3,<1.1.0",
"pre-commit>=2.17,<3.4",
"pydocstyle>=6.1.1,<6.4.0",
"pylint>=2.11.1,<2.18.0",
"pytest>=7.1.1,<7.5.0",
"pyupgrade>=2.31.1,<3.11.0",
"safety>=1.10.3,<2.4.0",
"coverage>=6.3,<8.0",
"coverage-badge~=1.1.0",
"pytest-html>=3.1.1,<3.3.0",
"pytest-cov>=3.0,<4.1",
"pytest-pycharm~=0.7.0",
]

[tool.black]
# https://github.com/psf/black
target-version = ["py39"]
line-length = 119
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 37
line_length = 119

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.7
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
]

[tool.coverage.run]
source = ["tests"]

[tool.hatch]
[coverage.paths]
source = "check_reqs"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true

[project]
dependencies = [
  "typer[all]",
  "rich",
]

name = "check_reqs"
version = "0.2.0"
description = "Checks if all requirements from a file are installed in the current Python env"
readme = "README.md"
authors = [
  { name = "René Fritze", email = "coding@fritze.me" },
]

requires-python = ">=3.7"
license = "MIT"
classifiers = [  #! Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
[project.urls]
repository = "https://github.com/renefritze/check_reqs"
homepage = "https://github.com/renefritze/check_reqs"
